<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    tools:context=".DessertDetailsActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/desserts_activity_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dessert_2" />

        <ImageButton
            android:id="@+id/desserts_activity_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="openMainActivity"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            android:background="@drawable/back_button_design"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="170dp"
                android:background="@drawable/desserts_info_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/dessert_total"
                app:layout_constraintTop_toBottomOf="@+id/desserts_activity_back">

                <TextView
                    android:id="@+id/dessert_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/chocolate_cake"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dessert_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:layout_toLeftOf="@id/dessert_price_text"
                    android:paddingTop="10dp"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/dessert_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/cake_price"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider_1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/dessert_name_text"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="7dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/dessert_detail_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider_1"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/cake_detail_text" />

                <View
                    android:id="@+id/divider_2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/dessert_detail_text"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/cake_editText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/divider_2"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="7dp"
                    android:hint="@string/cake_editText"
                    android:inputType="textCapSentences|textMultiLine" />

                <Button
                    android:id="@+id/send_request_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cake_editText"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:onClick="sendRequestClicked"
                    android:text="@string/send_request" />

                <View
                    android:id="@+id/divider_3"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/send_request_btn"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/dessert_billing_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider_3"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/billing_information"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dessert_subTotal_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dessert_billing_info"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/subtotal" />

                <TextView
                    android:id="@+id/dessert_subTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dessert_billing_info"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/SubTotal_amount" />

                <TextView
                    android:id="@+id/dessert_tax_fees_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dessert_subTotal_text"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_fees" />

                <TextView
                    android:id="@+id/dessert_tax_fees_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dessert_subTotal"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/tax_fees_amount" />

                <TextView
                    android:id="@+id/dessert_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dessert_tax_fees_text"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/delivery_text" />

                <TextView
                    android:id="@+id/dessert_delivery_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dessert_tax_fees_amount"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/dessert_delivery_type" />
            </RelativeLayout>
        <View
            android:id="@+id/bottom_view"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/dessert_total_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dessert_total_text"
            android:textColor="@android:color/white"
            android:layout_marginStart="14dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent" />
        <TextView
            android:id="@+id/dessert_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dessert_total_amount"
            android:textColor="@android:color/white"
            android:layout_marginStart="55dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:onClick="addToCart"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/white"
            android:text="@string/add_to_cart"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>

</FrameLayout>